kubernetes-deploy/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: pnt-quiz
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 81
      targetPort: 9090
  type: ClusterIP
